--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <div class="player">
-            <video id="video" src="./videos/lofi.mp4" width="400" poster="./images/poster.jpg" ></video>
+            <video id="video" src="./videos/Lofi.m4v" width="400" poster="./images/poster.jpg" ></video>
             
             <div class="player-overlay">
                 <h2 class="player-title">Música para programar</h2>
